Finished part4; playbook able to create all containers on the machines.

--- a/docker-playbook.yml
+++ b/docker-playbook.yml
@@ -1,11 +1,6 @@
 ---
 - hosts: frontend-machines
   become: true
-  vars:
-    container_count: 3
-    default_container_name: docker
-    default_container_image: node
-    default_container_command: npm run serve
   tasks:
     - name: Install required system packages
       apt:
@@ -52,5 +47,109 @@
       docker_container:
         name: frontendcontainer
         image: frontend:latest
+        network_mode: host
+        state: started
+
+
+- hosts: backend-machines
+  become: true
+  tasks:
+    - name: Install required system packages
+      apt:
+        pkg:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
+        state: latest
+        update_cache: true
+
+    - name: Install Docker Module for Python
+      pip:
+        name: docker
+
+    - name: create backend directory on remote
+      file:
+        path: /home/ansible/backend
+        state: directory
+        owner: ansible
+        group: ansible
+        mode: '0755'
+
+    - name: Copy backend dockerfile folder to remote
+      copy:
+        src: ./aits-docker-backend/
+        dest: /home/ansible/backend/
+        owner: ansible
+        group: ansible
+        mode: '0644'
+
+    - name: build container image
+      docker_image:
+        name: backend:latest
+        build:
+          path: /home/ansible/backend
+        source: build
+        state: present
+
+    - name: create container
+      docker_container:
+        name: backendcontainer
+        image: backend:latest
+        network_mode: host
+        state: started
+
+
+- hosts: database-machines
+  become: true
+  tasks:
+    - name: Install required system packages
+      apt:
+        pkg:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
+        state: latest
+        update_cache: true
+
+    - name: Install Docker Module for Python
+      pip:
+        name: docker
+
+    - name: create database directory on remote
+      file:
+        path: /home/ansible/database
+        state: directory
+        owner: ansible
+        group: ansible
+        mode: '0755'
+
+    - name: Copy database dockerfile folder to remote
+      copy:
+        src: ./aits-docker-database/
+        dest: /home/ansible/database/
+        owner: ansible
+        group: ansible
+        mode: '0644'
+
+    - name: build container image
+      docker_image:
+        name: database:latest
+        build:
+          path: /home/ansible/database
+        source: build
+        state: present
+
+    - name: create container
+      docker_container:
+        name: databasecontainer
+        image: database:latest
         network_mode: host
         state: started
